--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,8 @@ provider:
     stage: prod
     region: us-west-2
     environment:
-        tableName: ${env:tableName}
+        tableName: ${env:TABLE_NAME}
+        stripeSecretKey: ${env:STRIPE_SECRET_KEY}
 
     # 'iamRoleStatements' defines the permission policy for the Lambda function.
     # In this case Lambda functions are granted with permissions to access DynamoDB.
@@ -81,4 +82,14 @@ functions:
             - http:
                   path: notes/{id}
                   method: delete
+                  authorizer: aws_iam
+    # Defines an HTTP API endpoint that calls the main function in billing.js
+    # - path: url path is /billing
+    # - method: POST request
+    billing:
+        handler: billing.main
+        events:
+            - http:
+                  path: billing
+                  method: post
                   authorizer: aws_iam
